fix: fix app height

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <p class="log__amount"></p>
             </summary>
             <div class="log__body">
-                <h5 class="log__reference-label"></h5>
+                <h5 class="log__reference-label">Référence: </h5>
                 <p class="log__reference"></p>
             </div>
         </details>
