--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <!-- Bar -->
             <header class="bar">
                 <div class="bar__section bar__section--row">
-                    <img class="bar__logo" src="/src/assets/images/logo.svg" alt="Maze Bank logo">
+                    <svg class="bar__logo bar__logo--maze" width="48" height="48" viewBox="0 0 48 48" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M36.48 4.8H4.80005V43.2H9.60004V9.6H18.24V36.48H23.04V9.6H31.68V37.44H36.48V4.8ZM38.4 38.4H29.76V11.52H24.96V38.4H16.32V11.52H11.52V43.2H43.2V4.8H38.4V38.4Z"/>
+                    </svg>
                     <!-- Balance -->
                     <div class="balance">
                         <h2 class="balance__name">Solde</h2>
