fix: fix delete button color

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <td class="swift__section swift__section--right">
                 <details class="swift__accordion">
                     <summary class="icon icon--secondary icon--clickable icon--small icon--delete"></summary>
-                    <button class="button button--primary button--small swift__button">Supprimer</button>
+                    <button class="button button--delete button--small swift__button">Supprimer</button>
                 </details>
             </td>
         </tr>
