fix: fix app spinner

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="screen">
 
     <!-- App -->
-    <main class="app app--loaded">
+    <main class="app app--loading">
 
         <!-- App spinner -->
         <div class="app__spinner"></div>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </header>
-            
+
             <!-- View / account -->
             <div class="view" id="tab-content-account">
                 <div class="grid grid--account">
