--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <!-- Account add form -->
                     <section class="grid__section">
                         <form class="form" id="swift-add-form" novalidate>
-                            <h2 class="form__title">Ajouter un compte</h2>
+                            <h2 class="form__title">Ajouter un destinataire</h2>
                             <div class="form__row form__row--items-end">
                                 <div class="form__section form__section--fluid">
                                     <label class="form__label" for="swift-add-name-input">Nom du compte</label>
@@ -265,10 +265,10 @@
                             </div>
                             <div class="form__row">
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--primary">Déposer</button>
+                                    <button class="button button--primary" type="submit">Déposer</button>
                                 </div>
                                 <div class="form__section form__section--fixed">
-                                    <button class="button button--secondary">Tout déposer</button>
+                                    <button class="button button--secondary" type="button">Tout déposer</button>
                                 </div>
                             </div>
                         </form>
@@ -340,29 +340,29 @@
     </main>
 
     <template id="swift-delete-template">
-        <tr class="swift">
-            <td class="swift__section">
-                <h4 class="swift__name"></h4>
+        <tr class="account">
+            <td class="account__section">
+                <h4 class="account__name"></h4>
             </td>
-            <td class="swift__section">
-                <p class="swift__code"></p>
+            <td class="account__section">
+                <p class="account__code"></p>
             </td>
-            <td class="swift__section swift__section--right">
-                <details class="swift__accordion">
+            <td class="account__section account__section--right">
+                <details class="account__accordion">
                     <summary class="icon icon--secondary icon--clickable icon--small icon--delete"></summary>
-                    <button class="button button--delete button--small swift__button">Supprimer</button>
+                    <button class="button button--delete button--small account__button">Supprimer</button>
                 </details>
             </td>
         </tr>
     </template>
 
     <template id="swift-paste-template">
-        <tr class="swift swift--clickable">
-            <td class="swift__section">
-                <h4 class="swift__name swift__name--margin"></h4>
-                <p class="swift__code"></p>
+        <tr class="account account--clickable">
+            <td class="account__section">
+                <h4 class="account__name account__name--margin"></h4>
+                <p class="account__code"></p>
             </td>
-            <td class="swift__section swift__section--right">
+            <td class="account__section account__section--right">
                 <button class="icon icon--paste icon--negative-mr"></button>
             </td>
         </tr>
