--- a/index.html
+++ b/index.html
@@ -372,11 +372,7 @@
                 <p class="account__number"></p>
             </td>
             <td class="account__section account__section--right">
-                <svg class="account__icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
-                    <g transform="rotate(180 12 12)">
-                        <path fill="currentColor" d="M13 7h9v2h-9zm0 8h9v2h-9zm3-4h6v2h-6zm-3 1L8 7v4H2v2h6v4z"/>
-                    </g>
-                </svg>
+                <div class="account__paste-icon"></div>
             </td>
         </tr>
     </template>
