feat: add saved accounts status in the title of the list

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                             </div>
                         </form>
                     </section>
-                    <!-- Account account list -->
+                    <!-- Account list -->
                     <section class="grid__section">
                         <div class="section section--column">
-                            <h3 class="section__title">Comptes enregistrés</h3>
+                            <h3 class="section__title">Comptes enregistrés <span id="saved-accounts"></span></h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
                                     <table class="paper__table" id="account-delete-table"></table>
