feat: finish account list classes

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <h3 class="section__title">Comptes enregistrés <span id="saved-accounts"></span></h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
-                                    <table class="paper__table" id="account-delete-table"></table>
+                                    <table class="paper__table" id="account-delete-list"></table>
                                 </div>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                             <h3 class="section__title">Comptes enregistrés</h3>
                             <div class="paper section__body">
                                 <div class="paper__frame">
-                                    <table class="paper__table" id="account-paste-table"></table>
+                                    <table class="paper__table" id="account-paste-list"></table>
                                 </div>
                             </div>
                         </div>
