fix: fix log list

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="section section--column">
                             <h3 class="section__title">Historique des opérations</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame" id="global-log-list"></div>
+                                <div class="paper__frame" id="account-log-list"></div>
                             </div>
                         </div>
                     </section>
@@ -174,7 +174,7 @@
                         <div class="section section--column">
                             <h3 class="section__title">Historique des opérations</h3>
                             <div class="paper section__body">
-                                <div class="paper__frame" id="operation-log-list"></div>
+                                <div class="paper__frame" id="account-operation-log-list"></div>
                             </div>
                         </div>
                     </section>
