--- a/index.html
+++ b/index.html
@@ -385,12 +385,12 @@
     <template id="log-template">
         <details class="log">
             <summary class="log__header">
-                <div class="log__icon"></div>
-                <div class="log__info">
-                    <h3 class="log__type"></h3>
-                    <p class="log__date"></p>
-                </div>
-                <p class="log__amount"></p>
+                <span class="log__icon"></span>
+                <span class="log__info">
+                    <span class="log__type"></span>
+                    <span class="log__date"></span>
+                </span>
+                <span class="log__amount"></span>
             </summary>
             <div class="log__body">
                 <h5 class="log__reference-label">Référence: </h5>
